# SimplExp

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  test_simplexp.py
.github/workflows/: CI.yml
simplexp/: __init__.py
src/: c_api.rs  expressions.rs  lib.rs  operation_list.rs  optimizer.rs
