[package]
name = "simplexp"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "simplexp"
crate-type = ["cdylib"]

[dependencies]
konst = "0.2.13"
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
eq-float = "0.1.0"
